implementation of verticle, and eventbus proxy + handler